@@ -83,9 +83,9 @@ class PiccoloClientComponent:
             raise RuntimeError('{}: {}'.format(
                 response.code,p))
 
-    @property
-    def isConnected(self):
-        return self.__protocol is not None
+    async def isConnected(self):
+        p = await self.get_protocol()
+        return p is not None
         
     async def get_protocol(self):
         if self.__protocol is None:
