@@ -1,3 +1,6 @@
+2019-12-09 Magnus Hagdorn
+ * piccolo3/client/PiccoloBaseClient.py: turn property into co-routine
+
 2019-11-14 Mangus Hagdorn
  * piccolo-example.py: add simple example script
 
